<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textAmount"
        android:text="@string/amount"
         />

    <EditText
        android:id="@+id/editInputAmount"
        android:layout_width="376dp"
        android:layout_height="wrap_content"

        android:inputType="phone"
        android:digits="1234567890"
        android:hint="Enter the amount"
        />

    <TextView
        android:id="@+id/textNumPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/numPax"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editeditInputNumPax"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="Enter number of people"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tbsSvs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ToggleButton"
            android:textOff="@string/svsDisabled"
            android:textOn="@string/svsEnabled" />

        <ToggleButton
            android:id="@+id/tbsGst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ToggleButton"
            android:textOff="@string/gstDisabled"
            android:textOn="@string/gstEnabled" />
    </LinearLayout>

    <TextView
        android:id="@+id/discount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount" />

    <EditText
        android:id="@+id/editDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="Enter the amount of discount"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:id="@+id/rg">

        <RadioButton
            android:id="@+id/radioButtonCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cash"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButtonPayNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PayNow" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/split"
            android:textColor="#0C0C0C"
            app:backgroundTint="@android:color/darker_gray" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textColor="#191818"
            app:backgroundTint="@android:color/darker_gray" />
    </LinearLayout>

    <TextView
        android:id="@+id/totalbill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/eachPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

</LinearLayout>